--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 /* CSS Document */  
 
 /*
-Theme Name: AMP Theme
+Theme Name: http://www.nationalarchives.gov.uk/
 Theme URI: http://wordpress.org/
 Description: A custom theme developed specifically for the Archives Media Player.
-Version: 0.1
-Author: Josh Shindler, Dylan Williams
-Author URI: http://labs.nationalarchives.gov.uk/
+Version: 1.99
+Author: The National Archives
+Author URI: http://www.nationalarchives.gov.uk/
 Tags: grey, pink, responsive, two columns, widgets
 */
 
